views/public/css/main.css
/* ... */
.works .block .img-overly {
  position: relative;
  background: rgba(0, 0, 0, 0.85);
}
.works .block .img-overly img {
  border-radius: 0;
}
.works .block .img-overly .overly {
  background: rgba(57, 181, 74, 0.9);
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  opacity: 0;
  -webkit-transition: .3s all;
  -o-transition: .3s all;
  transition: .3s all;
}
.works .block .img-overly .overly a {
  position: absolute;
  top: 45%;
  left: 22%;
}
.works .block .img-overly .overly a i {
  font-size: 30px;
  color: #fff;
}
figure {
  background: #ff0;
  margin-bottom: 45px;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.04), 0 2px 10px 0 rgba(0, 0, 0, 0.06);
}
figure .img-wrapper {
  position: relative;
  overflow: hidden;
}
figure .img-wrapper img {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-animation: showMe 3s linear infinite 0s forwards;
  -moz-animation: showMe 3s linear infinite 0s forwards;
  -o-animation: showMe 3s linear infinite 0s forwards;
  -ms-animation: showMe 3s linear infinite 0s forwards;
  animation: showMe 3s linear infinite 0s forwards;
  -webkit-animation-play-state: paused;
  -moz-animation-play-state: paused;
  -o-animation-play-state: paused;
  -ms-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: -webkit-transform 400ms;
  transition: transform 400ms;
}
.img-wrapper img:nth-child(1){
  position: relative;
  z-index: 4;
}
.img-wrapper img:nth-child(2){
    -webkit-animation-delay: 1s;
  -moz-animation-delay: 1s;
  -o-animation-delay: 1s;
  -ms-animation-delay: 1s;
  animation-delay: 1s;
  z-index: 3;
}
.img-wrapper img:nth-child(3){
  -webkit-animation-delay: 2s;
  -moz-animation-delay: 2s;
  -o-animation-delay: 2s;
  -ms-animation-delay: 2s;
  animation-delay: 2s;
  z-index: 2;
}

figure:hover img {
  animation-play-state: running;
  -webkit-animation-play-state: running;
  -moz-animation-play-state: running;
  -o-animation-play-state: running;
  -ms-animation-play-state: running;
  animation-play-state: running;
}
figure:hover .overlay {
  opacity: 1;
}
figure:hover .overlay .buttons a {

  -webkit-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
}
figure .overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 10px;
  display: table-cell;
  text-align: center;
  background: rgba(0, 0, 0, 0);
  opacity: 0;
  -webkit-transition: opacity 400ms;
  transition: opacity 300ms;
}
figure .overlay a {
  color: #fff;
  line-height: 1;
  border-radius: 0px;
  margin: 0px;
  -webkit-transform: scale3d(0, 0, 0);
  transform: scale3d(0, 0, 0);
  -webkit-transition: all 400ms;
  transition: all 400ms;
}
figure .overlay a:hover {
  text-decoration: none;
}
figure .overlay:hover a {
  -webkit-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
}
figure .buttons {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  margin-right: auto;
  margin-left: auto;
  margin-top: auto;
  margin-bottom: auto;
  display: table;
  height: 25%;
  width: 30%;
  max-height: 50px;
  max-width: 70px;
  background: rgba(0, 0, 0, 0.3);
  transition: all 200ms;
  transform-origin: 50% 30%;
}
figure .buttons a {
  display: table-cell;
  vertical-align: middle;
  text-decoration: none;
  transition: all 200ms;
  transform-origin: 50% 30%;
}
figure .overlay .buttons:hover a{
  transform: scale(1.1);
}
figure .overlay .buttons:hover{
  transform: scale(1.1);
}

figure figcaption {
  padding: 20px 25px;
  margin-top: 0px;
  color: #666;
}
figure figcaption h4 {
  margin: 0;
}
figure figcaption h4 a {
  color: #02bdd5;
}
figure figcaption p {
  font-size: 14px;
  margin-bottom: 0;
  margin-top: 5px;
}
#feature {
  padding: 80px 0;
}
#feature .media {
  margin: 0px 0 70px 0;
}
#feature .media .media-left {
  padding-right: 25px;
}
#feature h3 {
  color: #000;
  font-size: 18px;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 20px;
  margin: 0px 0px 15px;
  font-weight: 400;
}
#feature p {
  line-height: 25px;
  font-size: 14px;
  color: #777777;
}
/* ... */

